# mlcosting

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTION.md  README.md  pyproject.toml
app/: main.py
app/classifiers/: preprocess.py
app/models/: __init__.py  reanalysis-era5-pressure-levels.json  reanalysis_era5_pressure_levels.py
