[project]
name = "mlcosting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "xgboost>=3.0.0",
]

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.28.5",
    "pre-commit>=4.2.0",
    "ruff>=0.11.0",
]
